update tests for new efficiency factors

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -111,11 +111,12 @@
     "\n",
     "from astropy.table import QTable\n",
     "\n",
-    "def read_instrument_model(filename='instrument_model/cmbs4_instrument_model.tbl'):\n",
+    "\n",
+    "def read_instrument_model(filename=\"instrument_model/cmbs4_instrument_model.tbl\"):\n",
     "    \"\"\"Read the CMB-S4 instrument model\n",
-    "    \n",
+    "\n",
     "    Includes all instrument parameters with units except bandpasses\n",
-    "    \n",
+    "\n",
     "    Paramters\n",
     "    ---------\n",
     "    filename : str path\n",
@@ -125,7 +126,7 @@
     "    s4 : QTable\n",
     "        astropy table with units, 1 row per channel\n",
     "    \"\"\"\n",
-    "    return QTable.read(filename, format='ascii.ipac')\n",
+    "    return QTable.read(filename, format=\"ascii.ipac\")\n",
     "\n",
     "\n",
     "def get_telescope(channel):\n",
