--- a/02_atmosphere.ipynb
+++ b/02_atmosphere.ipynb
@@ -41,7 +41,7 @@
     "    base_folder,\n",
     "    simulations_observing_efficiency,\n",
     "    mapmaking_naming,\n",
-    "    read_instrument_model\n",
+    "    read_instrument_model,\n",
     ")"
    ]
   },
@@ -93,7 +93,9 @@
     "        Channel tag, e.g. 'MFHS1'\n",
     "    \"\"\"\n",
     "    telescope_years = 0\n",
-    "    for telescope_name, telescope_config in config[\"telescopes\"][get_telescope(channel)].items():\n",
+    "    for telescope_name, telescope_config in config[\"telescopes\"][\n",
+    "        get_telescope(channel)\n",
+    "    ].items():\n",
     "        if telescope_config[\"site\"].lower() == site.lower():\n",
     "            has_band = telescope_config.get(channel[:-1], 0) > 0\n",
     "            telescope_years += has_band * telescope_config.get(\n",
@@ -168,7 +170,7 @@
     "# exports\n",
     "\n",
     "\n",
-    "def load_atmosphere(config, site, channel, realization=0):\n",
+    "def load_atmosphere(config, site, channel, realization=0, raw=False):\n",
     "    \"\"\"Load foreground maps for a channel\n",
     "\n",
     "    Parameters\n",
@@ -198,13 +200,17 @@
     "    atmosphere_map = hp.read_map(\n",
     "        Path(base_folder) / map_filename, (0, 1, 2), dtype=None, verbose=False\n",
     "    )\n",
+    "    if raw:\n",
+    "        atmosphere_map[atmosphere_map == 0] = hp.UNSEEN\n",
+    "        return atmosphere_map\n",
+    "\n",
     "    atmosphere_map[atmosphere_map == hp.UNSEEN] = np.nan\n",
     "    atmosphere_map[atmosphere_map == 0] = np.nan\n",
-    "    \n",
+    "\n",
     "    # input map is 10 days at 100% efficiency\n",
     "    atmosphere_map *= np.sqrt(\n",
     "        10\n",
-    "        * simulations_observing_efficiency[site.lower()].get(telescope, 1)\n",
+    "        * simulations_observing_efficiency[site.lower()][channel]\n",
     "        / (\n",
     "            365.25\n",
     "            * get_observing_efficiency(\n",
@@ -324,8 +330,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "channel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_observing_efficiency(\n",
+    "                config[\"experiment\"][\"observing_efficiency\"], site, telescope, channel\n",
+    "            )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "np.testing.assert_allclose(input_map[input_map != hp.UNSEEN] * \\\n",
-    "    np.sqrt(10 * simulations_observing_efficiency[site.lower()][telescope] / (7 * 365.25 * .2) / 2),\n",
+    "    np.sqrt(10 * simulations_observing_efficiency[site.lower()][channel] / (7 * 365.25 * 0.1359894704) / 2),\n",
     "    output_map[output_map != hp.UNSEEN], rtol=1e-6)"
    ]
   },
@@ -424,7 +450,7 @@
    "outputs": [],
    "source": [
     "np.testing.assert_allclose(config[\"experiment\"][\"atmosphere_scaling_T\"] * input_map[0][input_map[0] != hp.UNSEEN] * \\\n",
-    "    np.sqrt(10 * simulations_observing_efficiency[site.lower()][telescope] / (7 * 365.25 * .2) / 2),\n",
+    "    np.sqrt(10 * simulations_observing_efficiency[site.lower()][channel] / (7 * 365.25 * 0.1359894704) / 2),\n",
     "    output_map[0][output_map[0] != hp.UNSEEN], rtol=1e-6)"
    ]
   },
@@ -435,7 +461,7 @@
    "outputs": [],
    "source": [
     "np.testing.assert_allclose(config[\"experiment\"][\"atmosphere_scaling_P\"] * input_map[1:][input_map[1:] != hp.UNSEEN] * \\\n",
-    "    np.sqrt(10 * simulations_observing_efficiency[site.lower()][telescope] / (7 * 365.25 * .2) / 2),\n",
+    "    np.sqrt(10 * simulations_observing_efficiency[site.lower()][channel] / (7 * 365.25 * 0.1359894704) / 2),\n",
     "    output_map[1:][output_map[1:] != hp.UNSEEN], rtol=1e-6)"
    ]
   },
