--- a/03_noise.ipynb
+++ b/03_noise.ipynb
@@ -51,7 +51,7 @@
     "    simulations_observing_efficiency,\n",
     "    read_instrument_model,\n",
     "    mapmaking_naming,\n",
-    "    simulated_tubes\n",
+    "    simulated_tubes,\n",
     ")"
    ]
   },
@@ -148,7 +148,9 @@
     "        Channel tag, e.g. 'MFHS1'\n",
     "    \"\"\"\n",
     "    tube_years = 0\n",
-    "    for telescope_name, telescope_config in config[\"telescopes\"][get_telescope(channel)].items():\n",
+    "    for telescope_name, telescope_config in config[\"telescopes\"][\n",
+    "        get_telescope(channel)\n",
+    "    ].items():\n",
     "        if telescope_config[\"site\"].lower() == site.lower():\n",
     "            num_tubes = telescope_config.get(channel[:-1], 0)\n",
     "            tube_years += num_tubes * telescope_config.get(\n",
@@ -267,11 +269,11 @@
     "    )\n",
     "    output_map[output_map == hp.UNSEEN] = np.nan\n",
     "    output_map[output_map == 0] = np.nan\n",
-    "    \n",
+    "\n",
     "    # input map is 10 days\n",
     "    output_map *= np.sqrt(\n",
     "        10\n",
-    "        * simulations_observing_efficiency[site.lower()].get(telescope, 1)\n",
+    "        * simulations_observing_efficiency[site.lower()][channel]\n",
     "        / (\n",
     "            365.25\n",
     "            * get_observing_efficiency(\n",
@@ -279,7 +281,9 @@
     "            )\n",
     "        )\n",
     "    )\n",
-    "    output_map /= np.sqrt(get_tube_years(config, site, channel)/simulated_tubes[channel[:-1]])\n",
+    "    output_map /= np.sqrt(\n",
+    "        get_tube_years(config, site, channel) / simulated_tubes[channel[:-1]]\n",
+    "    )\n",
     "    # focal plane thinning factor of TOD simulations\n",
     "    output_map /= np.sqrt(get_thinfp(channel))\n",
     "    return output_map"
@@ -403,7 +407,7 @@
    "outputs": [],
    "source": [
     "np.testing.assert_allclose(input_map[input_map != hp.UNSEEN] * \\\n",
-    "    np.sqrt(10 * simulations_observing_efficiency[site.lower()][telescope] / 8 / (7 * 365.25 * 0.1359894704) / 4),\n",
+    "    np.sqrt(10 * simulations_observing_efficiency[site.lower()][channel] / 8 / (7 * 365.25 * 0.1359894704) / 4),\n",
     "    output_map[output_map != hp.UNSEEN], rtol=1e-6)"
    ]
   },
