--- a/04_hitmap_wcov.ipynb
+++ b/04_hitmap_wcov.ipynb
@@ -48,7 +48,8 @@
     "    base_folder,\n",
     "    simulations_observing_efficiency,\n",
     "    read_instrument_model,\n",
-    "    mapmaking_naming\n",
+    "    mapmaking_naming,\n",
+    "    simulated_tubes,\n",
     ")\n",
     "from s4_design_sim_tool.noise import get_thinfp, get_tube_years"
    ]
@@ -82,11 +83,17 @@
    "source": [
     "# exports\n",
     "\n",
-    "hitmaps_naming = {\"SAT\":\"telescope_all_time_all_hits.fits.gz\", \"LAT\":\"filtered_telescope_all_time_all_hmap.fits\"}\n",
-    "wcov_naming = {\"SAT\":\"telescope_all_time_all_wcov.fits.gz\", \"LAT\":\"filtered_telescope_all_time_all_wcov.fits\"}\n",
+    "hitmaps_naming = {\n",
+    "    \"SAT\": \"telescope_all_time_all_hits.fits.gz\",\n",
+    "    \"LAT\": \"filtered_telescope_all_time_all_hmap.fits\",\n",
+    "}\n",
+    "wcov_naming = {\n",
+    "    \"SAT\": \"telescope_all_time_all_wcov.fits.gz\",\n",
+    "    \"LAT\": \"filtered_telescope_all_time_all_wcov.fits\",\n",
+    "}\n",
     "\n",
     "\n",
-    "def load_hitmap_wcov(config, site, channel, realization=0):\n",
+    "def load_hitmap_wcov(config, site, channel, realization=0, raw_hitmap=False):\n",
     "    \"\"\"Load hitmaps and white noise covariance matrices for a channel\n",
     "\n",
     "    This loads the simulated hitmaps and white noise covariance matrices\n",
@@ -120,33 +127,37 @@
     "    # which is the same as noise except squared\n",
     "\n",
     "    telescope = get_telescope(channel)\n",
+    "    tube = channel[:-1]\n",
     "\n",
+    "    channel_noP = channel.replace(\"P\", \"\")\n",
+    "\n",
+    "    map_filename = (\n",
+    "        Path(f\"{realization:08d}\")\n",
+    "        / f\"{site.lower()}_noise_{telescope}_{channel_noP}_{hitmaps_naming[telescope]}\"\n",
+    "    )\n",
+    "    wcov_filename = (\n",
+    "        Path(f\"{realization:08d}\")\n",
+    "        / f\"{site.lower()}_noise_{telescope}_{channel_noP}_{wcov_naming[telescope]}\"\n",
+    "    )\n",
+    "    log.info(f\"Base folder: {base_folder}\")\n",
+    "    log.info(f\"Reading {map_filename}\")\n",
+    "    hitmap = hp.read_map(Path(base_folder) / map_filename, 0, dtype=None, verbose=False)\n",
+    "\n",
+    "    hitmap[hitmap == hp.UNSEEN] = 0\n",
+    "    if raw_hitmap:\n",
+    "        return hitmap\n",
+    "    wcov = hp.read_map(\n",
+    "        Path(base_folder) / wcov_filename, (0, 1, 2, 3, 4, 5), dtype=None, verbose=False\n",
+    "    )\n",
     "    scaling = (\n",
     "        365.25\n",
     "        * get_observing_efficiency(\n",
     "            config[\"experiment\"][\"observing_efficiency\"], site, telescope, channel\n",
     "        )\n",
-    "    ) / (10 * simulations_observing_efficiency[site.lower()].get(telescope, 1))\n",
-    "    scaling *= get_tube_years(config, site, channel)\n",
+    "    ) / (10 * simulations_observing_efficiency[site.lower()][channel])\n",
     "    # focal plane thinning factor of TOD simulations\n",
     "    scaling *= get_thinfp(channel)\n",
-    "\n",
-    "    map_filename = (\n",
-    "        Path(f\"{realization:08d}\")\n",
-    "        / f\"{site.lower()}_noise_{telescope}_{channel}_{hitmaps_naming[telescope]}\"\n",
-    "    )\n",
-    "    wcov_filename = (\n",
-    "        Path(f\"{realization:08d}\")\n",
-    "        / f\"{site.lower()}_noise_{telescope}_{channel}_{wcov_naming[telescope]}\"\n",
-    "    )\n",
-    "    log.info(f\"Base folder: {base_folder}\")\n",
-    "    log.info(f\"Reading {map_filename}\")\n",
-    "    hitmap = hp.read_map(Path(base_folder) / map_filename, 0, dtype=None, verbose=False)\n",
-    "    wcov = hp.read_map(\n",
-    "        Path(base_folder) / wcov_filename, (0, 1, 2, 3, 4, 5), dtype=None, verbose=False\n",
-    "    )\n",
-    "    hitmap[hitmap == hp.UNSEEN] = 0\n",
-    "    # input map is 10 days at 100% efficiency\n",
+    "    scaling *= get_tube_years(config, site, channel) / simulated_tubes[tube]\n",
     "    hitmap = np.round(hitmap * scaling).astype(np.int64)\n",
     "    hitmap *= simulations_sampling_frequency_scaling[telescope]\n",
     "    wcov /= scaling\n",
@@ -155,11 +166,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "## Available input maps"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -170,6 +181,134 @@
     "import toml\n",
     "\n",
     "config = toml.load(\"s4_reference_design.toml\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Estimate observation efficiency\n",
+    "\n",
+    "In the Winter 2021 run, there is a significant efficiency loss in the turnaround of the telescopes.\n",
+    "This is already taken into account in the overall observation efficiency so we want to calibrate it out.\n",
+    "Best is to use the hitmaps themselves, and scale them up from whatever number of hits to the expected\n",
+    "rate for 10 days at 100% efficiency for each channel.\n",
+    "\n",
+    "Still we want to make sure they are within 10% of the scheduling efficiencies measured by TOAST:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scheduling_efficiency = dict(\n",
+    "    pole=dict(SAT=0.642, LAT=0.754),\n",
+    "    chile=dict(SAT=0.988, LAT=1.042),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s4 = read_instrument_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tot_seconds = 10 * 24 * 60 * 60\n",
+    "sampling_frequency = dict(SAT=20, LAT=200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "observing_efficiency = dict(Pole={}, Chile={})\n",
+    "for row in s4:\n",
+    "    channel = row[\"band\"]\n",
+    "    sites = [\"Pole\"] if row[\"telescope\"] == \"SAT\" or (\"P\" in channel) else [\"Chile\"]\n",
+    "    for site in sites:\n",
+    "        print(channel, site)\n",
+    "        raw_hitmap = load_hitmap_wcov(config, site, channel, realization=0, raw_hitmap=True)\n",
+    "        observing_efficiency[site][channel] = raw_hitmap.sum() / (tot_seconds*sampling_frequency[row[\"telescope\"]]*row[\"detectors_per_tube\"]/ get_thinfp(channel))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "simulated_tubes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scheduling_efficiency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for site, channels in observing_efficiency.items():\n",
+    "    for channel in channels:\n",
+    "        observing_efficiency[site][channel] /= simulated_tubes[channel[:-1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for site, channels in observing_efficiency.items():\n",
+    "    for channel, efficiency in channels.items():\n",
+    "        telescope = get_telescope(channel)\n",
+    "        print(\n",
+    "f\"{site} {channel} Efficiency from hitmap {efficiency:.2f}, scheduling efficiency {scheduling_efficiency[site.lower()][telescope]:.2f}, ratio {efficiency/scheduling_efficiency[site.lower()][telescope]:.1%}\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "observing_efficiency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ls /global/cscratch1/sd/keskital/s4sim/reference_tool_round_2/out/00000000/pole_noise_LAT*hmap.fits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Verification of the input hitmap"
    ]
   },
   {
@@ -267,15 +406,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hitmap, wcov = load_hitmap_wcov(config, site, channel, realization=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "num_tubes = sum([\n",
     "    telescope[channel[:-1]] for telescope in config[\"telescopes\"][telescope].values()\n",
     "])"
@@ -288,8 +418,8 @@
    "outputs": [],
    "source": [
     "sampling_rate = input_map.sum() \n",
-    "sampling_rate /= 10 * 24 * 3600 * 0.3931149305555555\n",
-    "sampling_rate /= 8438 # HF detectors per tube\n",
+    "sampling_rate /= 10 * 24 * 3600 * 0.5410630787037037\n",
+    "sampling_rate /= 8592 # HF detectors per tube\n",
     "sampling_rate *= 8 # focal plane thinning factor"
    ]
   },
@@ -351,7 +481,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_NET = np.sqrt(np.median(input_variance))"
+    "input_variance = input_variance[input_variance > 0]"
    ]
   },
   {
@@ -360,7 +490,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_NET.to(u.uK * u.s**(.5))"
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(input_variance.value, bins=100, log=True);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_NET = np.sqrt(np.median(input_variance))"
    ]
   },
   {
@@ -387,7 +535,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "channel_NET = 747 * u.uK * u.s**(.5)"
+    "channel_NET = 609.1 * u.uK * u.s**(.5)"
    ]
   },
   {
@@ -403,7 +551,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert_quantity_allclose(input_NET, channel_NET*np.sqrt(2), rtol=5/100) "
+    "assert_quantity_allclose(input_NET/np.sqrt(2), channel_NET, rtol=5/100) "
    ]
   },
   {
@@ -412,9 +560,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sampling_rate = hitmap.sum() / (config[\"experiment\"][\"total_experiment_length_years\"] * config[\"experiment\"][\"observing_efficiency\"][\"default\"])\n",
+    "telescope"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Verify the output hitmap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hitmap, wcov = load_hitmap_wcov(config, site, channel, realization=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sampling_rate = hitmap.sum() / (config[\"experiment\"][\"total_experiment_length_years\"] * config[\"experiment\"][\"observing_efficiency\"][site][telescope][channel])\n",
     "sampling_rate /= 365.25 * 24 * 3600\n",
-    "sampling_rate /= 8438 # HF detectors per tube\n",
+    "sampling_rate /= 8592 # HF detectors per tube\n",
     "sampling_rate /= num_tubes"
    ]
   },
@@ -535,7 +708,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_mission_NET.to(u.uK * u.s**(.5))"
+    "full_mission_NET.to(u.uK * u.s**(.5))/np.sqrt(2)"
    ]
   },
   {
@@ -544,7 +717,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert_quantity_allclose(full_mission_NET, channel_NET*np.sqrt(2), rtol=5/100) "
+    "assert_quantity_allclose(full_mission_NET/np.sqrt(2), channel_NET, rtol=5/100) "
    ]
   },
   {
