--- a/05_cli.ipynb
+++ b/05_cli.ipynb
@@ -90,8 +90,22 @@
     "# export\n",
     "\n",
     "s4_channels = {\n",
-    "    \"SAT\": [\"HFS1\", \"HFS2\", \"LFS1\", \"LFS2\", \"MFHS1\", \"MFHS2\", \"MFLS1\", \"MFLS2\"],\n",
-    "    \"LAT\": [\"HFL1\", \"HFL2\", \"LFL1\", \"LFL2\", \"MFL1\", \"MFL2\", \"ULFL1\"],\n",
+    "    \"LAT\": [\n",
+    "        \"ULFPL1\",\n",
+    "        \"LFL1\",\n",
+    "        \"LFPL1\",\n",
+    "        \"LFL2\",\n",
+    "        \"LFPL2\",\n",
+    "        \"MFPL1\",\n",
+    "        \"MFL1\",\n",
+    "        \"MFL2\",\n",
+    "        \"MFPL2\",\n",
+    "        \"HFL1\",\n",
+    "        \"HFPL1\",\n",
+    "        \"HFL2\",\n",
+    "        \"HFPL2\",\n",
+    "    ],\n",
+    "    \"SAT\": [\"LFS1\", \"LFS2\", \"MFLS1\", \"MFHS1\", \"MFLS2\", \"MFHS2\", \"HFS1\", \"HFS2\"],\n",
     "}\n",
     "\n",
     "\n",
@@ -107,6 +121,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generate list of channels\n",
+    "\n",
+    "This is hardcoded above so we don't need to read the instrument model for processing channels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from s4_design_sim_tool.core import read_instrument_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s4 = read_instrument_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exported_s4_channels = {}\n",
+    "\n",
+    "for telescope, rows in zip(s4.group_by(\"telescope\").groups.keys, s4.group_by(\"telescope\").groups):\n",
+    "    exported_s4_channels[telescope[0]] = list(rows[\"band\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exported_s4_channels == s4_channels"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -115,8 +177,20 @@
     "assert parse_channels(\"LFL1\") == [\"LFL1\"]\n",
     "assert parse_channels([\"LFL1\"]) == [\"LFL1\"]\n",
     "assert parse_channels(\"LFL1,LFL2\") == [\"LFL1\", \"LFL2\"]\n",
-    "assert parse_channels(\"LAT\") == ['HFL1', 'HFL2', 'LFL1', 'LFL2', 'MFL1', 'MFL2', 'ULFL1']\n",
-    "assert len(parse_channels(\"all\")) == 15"
+    "assert parse_channels(\"LAT\") == ['ULFPL1',\n",
+    "  'LFL1',\n",
+    "  'LFPL1',\n",
+    "  'LFL2',\n",
+    "  'LFPL2',\n",
+    "  'MFPL1',\n",
+    "  'MFL1',\n",
+    "  'MFL2',\n",
+    "  'MFPL2',\n",
+    "  'HFL1',\n",
+    "  'HFPL1',\n",
+    "  'HFL2',\n",
+    "  'HFPL2']\n",
+    "assert len(parse_channels(\"all\")) == 21"
    ]
   },
   {
@@ -616,6 +690,13 @@
    "source": [
     "!rm only_CMB_scalar.toml"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
