Pole LAT channels do not have P intheir label

--- a/01_foregrounds.ipynb
+++ b/01_foregrounds.ipynb
@@ -93,6 +93,7 @@
     "    npix = hp.nside2npix(nside)\n",
     "    output_map = np.zeros((3, npix), dtype=np.float32)\n",
     "    realization = 0  # foregrounds are deterministic\n",
+    "    channel_noP = channel.replace(\"P\", \"\")\n",
     "    for emission, weight in config_sky_emission.items():\n",
     "        if weight == 0:\n",
     "            log.info(\"Skip %s\", emission)\n",
@@ -102,7 +103,7 @@
     "        emission_map = hp.read_map(\n",
     "            Path(base_folder)\n",
     "            / f\"{realization:08d}\"\n",
-    "            / f\"{site.lower()}_{emission_naming[emission]}_{telescope}_{channel}_{mapmaking_naming[telescope]}\",\n",
+    "            / f\"{site.lower()}_{emission_naming[emission]}_{telescope}_{channel_noP}_{mapmaking_naming[telescope]}\",\n",
     "            (0, 1, 2),\n",
     "            dtype=None,\n",
     "            verbose=False,\n",
