--- a/02_atmosphere.ipynb
+++ b/02_atmosphere.ipynb
@@ -192,9 +192,11 @@
     "    \"\"\"\n",
     "\n",
     "    telescope = get_telescope(channel)\n",
+    "    channel_noP = channel.replace(\"P\", \"\")\n",
+    "\n",
     "    map_filename = (\n",
     "        Path(f\"{realization:08d}\")\n",
-    "        / f\"{site.lower()}_atmosphere_{telescope}_{channel}_{mapmaking_naming[telescope]}\"\n",
+    "        / f\"{site.lower()}_atmosphere_{telescope}_{channel_noP}_{mapmaking_naming[telescope]}\"\n",
     "    )\n",
     "    log.info(f\"Reading {map_filename}\")\n",
     "    atmosphere_map = hp.read_map(\n",
