--- a/03_noise.ipynb
+++ b/03_noise.ipynb
@@ -258,9 +258,11 @@
     "        Output map with all emissions combined, uses nan for missing pixels\n",
     "    \"\"\"\n",
     "    telescope = get_telescope(channel)\n",
+    "    channel_noP = channel.replace(\"P\", \"\")\n",
+    "\n",
     "    map_filename = (\n",
     "        Path(f\"{realization:08d}\")\n",
-    "        / f\"{site.lower()}_noise_{telescope}_{channel}_{mapmaking_naming[telescope]}\"\n",
+    "        / f\"{site.lower()}_noise_{telescope}_{channel_noP}_{mapmaking_naming[telescope]}\"\n",
     "    )\n",
     "    log.info(f\"Base folder: {base_folder}\")\n",
     "    log.info(f\"Reading {map_filename}\")\n",
