check if output exists before loading sky

--- a/05_cli.ipynb
+++ b/05_cli.ipynb
@@ -332,10 +332,7 @@
     "                subfolder.mkdir(parents=True, exist_ok=True)\n",
     "                log.info(\"Created output folder %s\", str(subfolder))\n",
     "\n",
-    "                log.info(f\"Simulate channel {channel} at {site}\")\n",
-    "                sky_emission = load_sky_emission(\n",
-    "                    self.config[\"sky_emission\"], site, channel\n",
-    "                )\n",
+    "\n",
     "                for split in range(nsplits + 1):\n",
     "                    nside = 512 if telescope == \"SAT\" else 4096\n",
     "                    output_filename = self.output_filename_template.format(\n",
@@ -349,6 +346,12 @@
     "                    if os.path.exists(subfolder / output_filename):\n",
     "                        log.info(\"File %s already exists, SKIP\", output_filename)\n",
     "                        continue\n",
+    "                        \n",
+    "                    if split == 0:\n",
+    "                        log.info(f\"Simulate channel {channel} at {site}\")\n",
+    "                        sky_emission = load_sky_emission(\n",
+    "                            self.config[\"sky_emission\"], site, channel\n",
+    "                        )\n",
     "\n",
     "                    output_map = np.zeros_like(sky_emission)\n",
     "                    if self.config[\"experiment\"].get(\"include_atmosphere\", True):\n",
