feat: apply yield factor

--- a/03_noise.ipynb
+++ b/03_noise.ipynb
@@ -281,6 +281,7 @@
     "            * get_observing_efficiency(\n",
     "                config[\"experiment\"][\"observing_efficiency\"], site, telescope, channel\n",
     "            )\n",
+    "            * config[\"experiment\"][\"detector_yield_factor\"]\n",
     "        )\n",
     "    )\n",
     "    output_map /= np.sqrt(\n",
