feat: scale atmosphere polarization by thinning factor
Closes #24

--- a/02_atmosphere.ipynb
+++ b/02_atmosphere.ipynb
@@ -42,7 +42,9 @@
     "    simulations_observing_efficiency,\n",
     "    mapmaking_naming,\n",
     "    read_instrument_model,\n",
-    ")"
+    ")\n",
+    "\n",
+    "from s4_design_sim_tool.noise import get_thinfp"
    ]
   },
   {
@@ -224,6 +226,7 @@
     "\n",
     "    atmosphere_map[0] *= config[\"experiment\"].get(\"atmosphere_scaling_T\", 1)\n",
     "    atmosphere_map[1:] *= config[\"experiment\"].get(\"atmosphere_scaling_P\", 1)\n",
+    "    atmosphere_map[1:] /= np.sqrt(get_thinfp(channel))\n",
     "\n",
     "    return atmosphere_map"
    ]
