update unit tests to support scaling of polarization by thinning factor

--- a/02_atmosphere.ipynb
+++ b/02_atmosphere.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = toml.load(\"s4_reference_design.toml\")"
+    "config = toml.load(\"s4_design.toml\")"
    ]
   },
   {
@@ -355,8 +355,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.testing.assert_allclose(input_map[input_map != hp.UNSEEN] * \\\n",
-    "    np.sqrt(10 * simulations_observing_efficiency[site.lower()][channel] / (7 * 365.25 * 0.1359894704) / 2),\n",
+    "expected_map = input_map * \\\n",
+    "    np.sqrt(10 * simulations_observing_efficiency[site.lower()][channel] / (7 * 365.25 * 0.1359894704) / 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expected_map[1:] /= np.sqrt(get_thinfp(channel))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.testing.assert_allclose(expected_map[input_map != hp.UNSEEN],\n",
     "    output_map[output_map != hp.UNSEEN], rtol=1e-6)"
    ]
   },
@@ -465,7 +483,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.testing.assert_allclose(config[\"experiment\"][\"atmosphere_scaling_P\"] * input_map[1:][input_map[1:] != hp.UNSEEN] * \\\n",
+    "np.testing.assert_allclose(config[\"experiment\"][\"atmosphere_scaling_P\"] / np.sqrt(get_thinfp(channel)) * input_map[1:][input_map[1:] != hp.UNSEEN] * \\\n",
     "    np.sqrt(10 * simulations_observing_efficiency[site.lower()][channel] / (7 * 365.25 * 0.1359894704) / 2),\n",
     "    output_map[1:][output_map[1:] != hp.UNSEEN], rtol=1e-6)"
    ]
