test: load observing efficiency from file instead of hardcode

--- a/02_atmosphere.ipynb
+++ b/02_atmosphere.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = toml.load(\"s4_reference_design.toml\")"
+    "config = toml.load(\"s4_design.toml\")"
    ]
   },
   {
@@ -341,7 +341,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_observing_efficiency(\n",
+    "observing_efficiency = get_observing_efficiency(\n",
     "                config[\"experiment\"][\"observing_efficiency\"], site, telescope, channel\n",
     "            )"
    ]
@@ -352,8 +352,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "observing_efficiency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "np.testing.assert_allclose(input_map[input_map != hp.UNSEEN] * \\\n",
-    "    np.sqrt(10 * simulations_observing_efficiency[site.lower()][channel] / (7 * 365.25 * 0.1359894704) / 2),\n",
+    "    np.sqrt(10 * simulations_observing_efficiency[site.lower()][channel] / (7 * 365.25 * observing_efficiency) / 2),\n",
     "    output_map[output_map != hp.UNSEEN], rtol=1e-6)"
    ]
   },
@@ -452,7 +461,7 @@
    "outputs": [],
    "source": [
     "np.testing.assert_allclose(config[\"experiment\"][\"atmosphere_scaling_T\"] * input_map[0][input_map[0] != hp.UNSEEN] * \\\n",
-    "    np.sqrt(10 * simulations_observing_efficiency[site.lower()][channel] / (7 * 365.25 * 0.1359894704) / 2),\n",
+    "    np.sqrt(10 * simulations_observing_efficiency[site.lower()][channel] / (7 * 365.25 * observing_efficiency) / 2),\n",
     "    output_map[0][output_map[0] != hp.UNSEEN], rtol=1e-6)"
    ]
   },
@@ -463,7 +472,7 @@
    "outputs": [],
    "source": [
     "np.testing.assert_allclose(config[\"experiment\"][\"atmosphere_scaling_P\"] * input_map[1:][input_map[1:] != hp.UNSEEN] * \\\n",
-    "    np.sqrt(10 * simulations_observing_efficiency[site.lower()][channel] / (7 * 365.25 * 0.1359894704) / 2),\n",
+    "    np.sqrt(10 * simulations_observing_efficiency[site.lower()][channel] / (7 * 365.25 * observing_efficiency) / 2),\n",
     "    output_map[1:][output_map[1:] != hp.UNSEEN], rtol=1e-6)"
    ]
   },
