feat: support sensitivity factors

--- a/03_noise.ipynb
+++ b/03_noise.ipynb
@@ -185,7 +185,7 @@
    "source": [
     "import toml\n",
     "\n",
-    "config = toml.load(\"s4_reference_design.toml\")"
+    "config = toml.load(\"s4_design.toml\")"
    ]
   },
   {
@@ -281,7 +281,9 @@
     "            * get_observing_efficiency(\n",
     "                config[\"experiment\"][\"observing_efficiency\"], site, telescope, channel\n",
     "            )\n",
-    "            * config[\"experiment\"][\"detector_yield_factor\"]\n",
+    "            * get_observing_efficiency(\n",
+    "                config[\"experiment\"][\"sensitivity_factor\"], site, telescope, channel\n",
+    "            )\n",
     "        )\n",
     "    )\n",
     "    output_map /= np.sqrt(\n",
@@ -409,8 +411,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "observing_efficiency = get_observing_efficiency(\n",
+    "                config[\"experiment\"][\"observing_efficiency\"], site, telescope, channel\n",
+    "            ) * get_observing_efficiency(\n",
+    "                config[\"experiment\"][\"sensitivity_factor\"], site, telescope, channel\n",
+    "            )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "observing_efficiency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "np.testing.assert_allclose(input_map[input_map != hp.UNSEEN] * \\\n",
-    "    np.sqrt(10 * simulations_observing_efficiency[site.lower()][channel] / 8 / (7 * 365.25 * 0.1359894704) / 4),\n",
+    "    np.sqrt(10 * simulations_observing_efficiency[site.lower()][channel] / 8 / (7 * 365.25 * observing_efficiency) / 4),\n",
     "    output_map[output_map != hp.UNSEEN], rtol=1e-6)"
    ]
   },
