fix: update to renamed s4_design.toml

--- a/02_atmosphere.ipynb
+++ b/02_atmosphere.ipynb
@@ -119,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!tail -30 s4_reference_design.toml"
+    "!tail -30 s4_design.toml"
    ]
   },
   {
