--- a/04_hitmap_wcov.ipynb
+++ b/04_hitmap_wcov.ipynb
@@ -180,7 +180,7 @@
    "source": [
     "import toml\n",
     "\n",
-    "config = toml.load(\"s4_reference_design.toml\")"
+    "config = toml.load(\"s4_design.toml\")"
    ]
   },
   {
