--- a/05_cli.ipynb
+++ b/05_cli.ipynb
@@ -245,7 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "console_md5sum = !md5sum s4_reference_design.toml"
+    "console_md5sum = !md5sum s4_design.toml"
    ]
   },
   {
@@ -263,7 +263,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert md5sum_file(\"s4_reference_design.toml\") == console_md5sum[-1].split()[0]"
+    "assert md5sum_file(\"s4_design.toml\") == console_md5sum[-1].split()[0]"
    ]
   },
   {
@@ -283,7 +283,7 @@
     "        ----------\n",
     "        config : str or Path or List\n",
     "            CMB-S4 configuration stored in a TOML file\n",
-    "            see for example s4_reference_design.toml in the repository\n",
+    "            see for example s4_design.toml in the repository\n",
     "            It also supports multiple TOML files as a List, in this case\n",
     "            later files override configuration files of the earlier files.\n",
     "            check the `config` attribute to verify that the parsing behaved\n",
@@ -521,7 +521,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim = S4RefSimTool(\"s4_reference_design.toml\")"
+    "sim = S4RefSimTool(\"s4_design.toml\")"
    ]
   },
   {
@@ -655,7 +655,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim2 = S4RefSimTool([\"s4_reference_design.toml\", \"only_CMB_scalar.toml\"])"
+    "sim2 = S4RefSimTool([\"s4_design.toml\", \"only_CMB_scalar.toml\"])"
    ]
   },
   {
