--- a/06_ui.ipynb
+++ b/06_ui.ipynb
@@ -287,7 +287,7 @@
    "outputs": [],
    "source": [
     "import toml\n",
-    "config = toml.load(\"s4_reference_design.toml\")"
+    "config = toml.load(\"s4_design.toml\")"
    ]
   },
   {
