--- a/index.ipynb
+++ b/index.ipynb
@@ -25,7 +25,7 @@
     "## Configuration options\n",
     "\n",
     "The simulation configuration is defined by a TOML text file,\n",
-    "see for example the TOML configuration for the CMB-S4 reference design: [s4_reference_design.toml](https://github.com/CMB-S4/s4_design_sim_tool/blob/master/s4_reference_design.toml)\n",
+    "see for example the TOML configuration for the CMB-S4 reference design: [s4_design.toml](https://github.com/CMB-S4/s4_design_sim_tool/blob/master/s4_design.toml)\n",
     "\n",
     "### Sky emission\n",
     "\n",
