update unit tests to support scaling of polarization by thinning factor

--- a/02_atmosphere.ipynb
+++ b/02_atmosphere.ipynb
@@ -355,7 +355,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "observing_efficiency"
+    "input_map[input_map == hp.UNSEEN] = np.nan"
    ]
   },
   {
@@ -364,8 +364,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.testing.assert_allclose(input_map[input_map != hp.UNSEEN] * \\\n",
-    "    np.sqrt(10 * simulations_observing_efficiency[site.lower()][channel] / (7 * 365.25 * observing_efficiency) / 2),\n",
+    "expected_map = input_map * np.sqrt(10 * simulations_observing_efficiency[site.lower()][channel] / (7 * 365.25 * observing_efficiency) / 2)\n",
+    "expected_map[1:] /= np.sqrt(get_thinfp(channel))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.testing.assert_allclose(expected_map[np.logical_not(np.isnan(expected_map))],\n",
     "    output_map[output_map != hp.UNSEEN], rtol=1e-6)"
    ]
   },
@@ -463,8 +472,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.testing.assert_allclose(config[\"experiment\"][\"atmosphere_scaling_T\"] * input_map[0][input_map[0] != hp.UNSEEN] * \\\n",
-    "    np.sqrt(10 * simulations_observing_efficiency[site.lower()][channel] / (7 * 365.25 * observing_efficiency) / 2),\n",
+    "np.testing.assert_allclose(config[\"experiment\"][\"atmosphere_scaling_T\"] * expected_map[0, np.logical_not(np.isnan(expected_map[0]))],\n",
     "    output_map[0][output_map[0] != hp.UNSEEN], rtol=1e-6)"
    ]
   },
@@ -474,8 +482,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.testing.assert_allclose(config[\"experiment\"][\"atmosphere_scaling_P\"] * input_map[1:][input_map[1:] != hp.UNSEEN] * \\\n",
-    "    np.sqrt(10 * simulations_observing_efficiency[site.lower()][channel] / (7 * 365.25 * observing_efficiency) / 2),\n",
+    "np.testing.assert_allclose(config[\"experiment\"][\"atmosphere_scaling_P\"]  * expected_map[1:][np.logical_not(np.isnan(expected_map[1:]))],\n",
     "    output_map[1:][output_map[1:] != hp.UNSEEN], rtol=1e-6)"
    ]
   },
