--- a/index.ipynb
+++ b/index.ipynb
@@ -22,6 +22,10 @@
     "\n",
     "the web interface is currently unavailable.\n",
     "\n",
+    "## Releases and changelog\n",
+    "\n",
+    "See the [`CHANGELOG`](https://github.com/CMB-S4/s4_design_sim_tool/blob/master/CHANGELOG.md)\n",
+    "\n",
     "## Configuration options\n",
     "\n",
     "The simulation configuration is defined by a TOML text file,\n",
@@ -43,8 +47,8 @@
     "Scaling of atmospheric and instrument noise is performed with these assumption:\n",
     "\n",
     "* scale the 10-day simulations to 1 year considering the observing efficiency\n",
-    "* for Pole also consider the additional efficiency factor\n",
     "* scale by the detector-years for noise and telescope-years for atmosphere\n",
+    "* for both emissions also consider the overall expected observing efficiency, for noise also consider the sensitivity factor\n",
     "\n",
     "Therefore 2 tubes on the same telescope have the same atmospheric noise of 1 tube, to reduce noise from the atmosphere we need to distribute tubes across multiple telescopes.\n",
     "For instrument noise instead, it doesn't matter their distribution across telescopes, just their number.\n",
@@ -65,7 +69,7 @@
     "* Bandpass integrated with tophat bandpasses from `s4sim`\n",
     "* Smoothed with gaussian beams\n",
     "\n",
-    "See the [202006_foregrounds_extragalactic_cmb_tophat](https://github.com/CMB-S4/s4mapbasedsims/tree/master/202006_foregrounds_extragalactic_cmb_tophat) map based simulations.\n",
+    "See the [`202102_design_tool_input`](https://github.com/CMB-S4/s4mapbasedsims/tree/master/202102_design_tool_input) map based simulations.\n",
     "\n",
     "Then the maps were used as inputs for a time-domain simulation with TOAST to simulate the effect\n",
     "of a filter-and-bin mapmaking with the CMB-S4 scanning strategy both for Pole and Chile.\n",
@@ -76,18 +80,7 @@
     "\n",
     "These factors should be corrected for the *noise and atmosphere* maps: `map_out = map_in * sqrt(efficiency)`.\n",
     "\n",
-    "Also for expedience, we downsampled the densest focal planes to reduce the overall detector counts:\n",
-    "```\n",
-    "telescope  band   thinfp\n",
-    "LAT        HFL      8\n",
-    "LAT        MFL      8\n",
-    "LAT        LFL      1\n",
-    "LAT        ULFL     1\n",
-    "SAT        HFS      8\n",
-    "SAT        MFHS     4\n",
-    "SAT        MFLS     4\n",
-    "SAT        LFS      1\n",
-    "```\n",
+    "Also for expedience, we downsampled the densest focal planes to reduce the overall detector counts.\n",
     "These factors should be corrected for in the *noise* maps but not in the atmospheric maps: `map_out = map_in / sqrt(thinfp)`.\n",
     "\n",
     "More information about the noise and atmosphere simulations are available at:\n",
