add sensitivity factor in hitmap and wcov
See #23

--- a/04_hitmap_wcov.ipynb
+++ b/04_hitmap_wcov.ipynb
@@ -154,6 +154,9 @@
     "        * get_observing_efficiency(\n",
     "            config[\"experiment\"][\"observing_efficiency\"], site, telescope, channel\n",
     "        )\n",
+    "        * get_observing_efficiency(\n",
+    "            config[\"experiment\"][\"sensitivity_factor\"], site, telescope, channel\n",
+    "        )\n",
     "    ) / (10 * simulations_observing_efficiency[site.lower()][channel])\n",
     "    # focal plane thinning factor of TOD simulations\n",
     "    scaling *= get_thinfp(channel)\n",
@@ -585,7 +588,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sampling_rate = hitmap.sum() / (config[\"experiment\"][\"total_experiment_length_years\"] * config[\"experiment\"][\"observing_efficiency\"][site][telescope][channel])\n",
+    "sampling_rate = hitmap.sum() / (config[\"experiment\"][\"total_experiment_length_years\"] \\\n",
+    "                                * config[\"experiment\"][\"observing_efficiency\"][site][telescope][channel] \\\n",
+    "                                * config[\"experiment\"][\"sensitivity_factor\"][site][telescope][channel])\n",
     "sampling_rate /= 365.25 * 24 * 3600\n",
     "sampling_rate /= 8592 # HF detectors per tube\n",
     "sampling_rate /= num_tubes"
