remove output test map

--- a/05_cli.ipynb
+++ b/05_cli.ipynb
@@ -66,6 +66,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "hp.disable_warnings()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# exports\n",
     "\n",
     "import hashlib\n",
@@ -625,6 +634,15 @@
    "outputs": [],
    "source": [
     "hp.mollview(output_map[2], min=-1e-5, max=1e-5, unit=\"K\", title=\"Total U\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm -r output/SAT-LFS1_pole"
    ]
   },
   {
