feat: support excluding hitmap wcov

--- a/05_cli.ipynb
+++ b/05_cli.ipynb
@@ -406,8 +406,10 @@
     "                        overwrite=True,\n",
     "                    )\n",
     "                    # only run of full mission and the first split\n",
-    "                    if split in [0, 1] and self.config[\"experiment\"].get(\n",
-    "                        \"include_noise\", True\n",
+    "                    if (\n",
+    "                        split in [0, 1]\n",
+    "                        and self.config[\"experiment\"].get(\"include_noise\", True)\n",
+    "                        and self.config[\"experiment\"].get(\"process_hitmap_wcov\", True)\n",
     "                    ):\n",
     "\n",
     "                        log.info(f\"Loading hitmap and white noise covariance matrix\")\n",
